--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/redirectPolicy/ActionLayoutRedirectPolicyPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/redirectPolicy/ActionLayoutRedirectPolicyPage-description.adoc
@@ -2,60 +2,56 @@
 
 [WARNING]
 ====
-This feature is currently *not* supported by the _Wicket Viewer_; see link:https://issues.apache.org/jira/browse/CAUSEWAY-1659[CAUSEWAY-1659]
+This feature is currently *not* supported by the _Wicket Viewer_; tracked by link:https://issues.apache.org/jira/browse/CAUSEWAY-1659[CAUSEWAY-1659]
 ====
 
-If an action returns its target, then the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/ActionLayout.html#redirectpolicy[@ActionLayout#redirectPolicy]` attribute determines
-whether to update the page or instead to redirect (forcing a re-rendering of a new page).
-Not re-rendering can provide a smoother UI experience.
+If an action returns its target, then the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/ActionLayout.html#redirectpolicy[@ActionLayout#redirectPolicy] attribute determines
+whether to update the page or instead to redirect (which redraws the enter page).
+_This only has an effect on actions that return the object on which they are invoked, ie which return ``this``_.
 
+The annotation is intended to be used in combination with link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#repainting[@PropertyLayout#repainting]`, which specifies that a property is immutable, expensive and should not be re-rendered if necessary.
+The canonical use case is a blob property that holds a PDF, and which uses the link:https://causeway.apache.org/vw/2.0.0-RC1/pdfjs/about.html[pdf.js] viewer extension to render the PDF.
+Such a PDF is immutable.
+In such cases, not re-rendering that PDF provides a smoother UI experience.
 
 == How this demo works
 
-TODO
+On the left hand side is a collection of entities, each of which has a counter and a PDF property.
+The value of the PDF property is immutable and so is annotated with `@PropertyLayout#repainting` to disable repainting if possible.
 
-// This page has a `count` property with two associated actions.
-// These both increment the `count`, but use different redirect policies.
-//
-// The page also has a `currentTime` property, that displays the current time.
-// This is a derived property that also has a built-in delay of 1 second.
-//
-// [source,java,indent=0]
-// ----
-// include::ActionLayoutRedirectPolicyPage.java[tags=class]
-// ----
-// <.> for demonstration purposes, this UI component opts out of being redrawn if there is no redirect.
-//
-// [NOTE]
-// ====
-// In this demo we are somewhat misusing the `@PropertyLayout#repainting` attribute; normally this is used for components that are expensive to render _and_ which are generally unchanging.
-// The most common example of such a property would be a PDF, rendered using the link:https://causeway.apache.org/vw/2.0.0-RC1/pdfjs/about.html[PDF.js] extension (the link:https://causeway.apache.org/refguide/2.0.0-RC1/extensions/index/pdfjs/applib/annotations/PdfJsViewer.html#section-top[@PdfJsViewer] annotation).
-// ====
-//
-// The behaviour observed therefore depends on which action is used:
-//
-// * if the "increment even if same" action is called:
-// +
-// [source,java,indent=0]
-// ----
-// include::ActionLayoutRedirectPolicyPage_incrementRedirectEvenIfSame.java[tags=class]
-// ----
-// <.> always render the page.
-// +
-// This causes the entire page to be re-rendered.
-// That means that the current time will be updated, but only after a 1 second delay
-//
-// * if the "increment redirect only if differs" action is called:
-// +
-// [source,java,indent=0]
-// ----
-// include::ActionLayoutRedirectPolicyPage_incrementRedirectOnlyIfDiffers.java[tags=class]
-// ----
-// <.> only re-render the updated property.
-// +
-// This _should_ cause only the updated property to re-render.
-// +
-// [WARNING]
-// ====
-// Because this feature is currently *not* supported by the _Wicket Viewer_, in fact the `currentTime` property also re-renders; see link:https://issues.apache.org/jira/browse/CAUSEWAY-1659[CAUSEWAY-1659]
-// ====
+The entity also has two actions that update a counter, and which both return `this`.
+One of these is annotated with `@ActionLayout#redirectPolicy` to specify that the page should be updated; this should result in the PDF not being unnecessarily redrawn.
+
+[WARNING]
+====
+This feature is currently *not* supported by the _Wicket Viewer_; tracked by link:https://issues.apache.org/jira/browse/CAUSEWAY-1659[CAUSEWAY-1659]
+====
+
+In terms of code:
+
+* PDF blob
++
+[source,java,indent=0]
+----
+include::ActionLayoutRedirectPolicyEntity.java[tags=class]
+----
+<.> render the blob as a PDF
+<.> don't repaint the PDF if possible
+
+* redirect even if the same
++
+[source,java,indent=0]
+----
+include::ActionLayoutRedirectPolicyEntity_incrementRedirectOnlyIfDiffers.java[tags=class]
+----
+<.> suppress redirect if returning the same object
+<.> return the same object
+
+* redirect even if the same
++
+[source,java,indent=0]
+----
+include::ActionLayoutRedirectPolicyEntity_incrementRedirectEvenIfSame.java[tags=class]
+----
+<.> redirect _even if_ returning the same object
+
