--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/repainting/PropertyLayoutRepaintingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/PropertyLayout/repainting/PropertyLayoutRepaintingPage-description.adoc
@@ -2,37 +2,12 @@
 
 WARNING: this functionality is currently *not* supported by the Wicket viewer; see link:https://issues.apache.org/jira/browse/CAUSEWAY-1659[CAUSEWAY-1659].
 
-The `repainting` attribute indicates that the value held by the property never changes over time, even when other properties of the object do change.
+The link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#repainting[@PropertyLayout#repainting] attribute indicates that the value held by the property never changes over time, even when other properties of the object do change.
 When set to "no repaint", the viewer uses this element to not repaint the property after an AJAX update even if some other property/ies of the object have changed.
 
-* for properties, the attribute can be specified using either the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/PropertyLayout.html#repainting[@PropertyLayout#repainting] annotation, or using the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] layout file.
+For this attribute to work, the action being invoked must return the same object (return `this`) and must also be annotated with link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/ActionLayout.html#redirectpolicy[@ActionLayout#redirectPolicy].
 
-The attribute does _not_ apply for action parameters.
-
-The primary use case for performance, for example so that large PDFs/blobs do not need to be re-rendered.
-
-IMPORTANT: if there are multiple blobs or clobs, then _all_ must specify "NO REPAINT".
-Said another way: if only one blob/clob property requires a repaint, then all will be repainted.
 
 == How this demo works
 
-This page contains two properties.
-
-* The `editMe` property is to demonstrate a change in state can be made.
-
-* The `blob` property holds a PDF and moreover is annotated with link:https://causeway.apache.org/refguide/2.0.0-RC1/extensions/index/pdfjs/applib/annotations/PdfJsViewer.html[@PdfJsViewer] so that it is rendered using PDF.js.
-
-From a usability perspective, we don't want the page to redraw - in particluar, the `blob` property - if all that has changed is the `editMe` property.
-
-The (no) repainting hint is specified explicitly using `@PropertyLayout#repainting()`:
-
-[source,java,indent=0]
-----
-include::PropertyLayoutRepaintingPage.java[tags=annotation]
-----
-<.> explicitly specifies that the property should not be repainted
-<.> The Wicket pdf.js extension will render this Blob as a PDF
-
-TIP: this annotation can also be combined with link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/ActionLayout.html#redirectpolicy[@ActionLayout#redirectPolicy].
-
-
+See the demo page for `@ActionLayout > Redirect Policy` for a full demo of how to use the `@PropertyLayout#repainting` in conjunction with `@ActionLayout#redirectPolicy`.
